# genesis

./: .gitignore  LICENSE  README.md  TODO.md  build.py  commands.py  config.yaml  disk_utils.py  install_deps.sh  pyproject.toml  setup.cfg  snaps.py  start_vm.sh  tox.ini
configs/: generic.yaml  kvm.yaml
files/: extra-grub-config.cfg
genesis/: __main__.py  build.py  commands.py  config.py  disk_utils.py  snaps.py
src/genesis/: build.py  commands.py  disk_utils.py  snaps.py
tests/: build_basic_server.sh  functions.sh
