[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "genesis"
version = "0.0.1"
authors = [
  {name = "Gauthier Jolly", email = "contact@gauthierjolly.com"},
]
description = "Tool to build ubuntu live images"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

dependencies = [
    "click",
    "pyyaml",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/gjolly/genesis"
"Bug Tracker" = "https://github.com/gjolly/genesis/issues"

[project.scripts]
genesis = "genesis.build:cli"

[flake8]
max-line-length = 88
extend-ignore = "E203"

[isort]
profile = "black"
