[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "genesis"
version = "0.1.0"
authors = [
  {name = "Gauthier Jolly", email = "contact@gauthierjolly.com"},
]
description = "Tool to build ubuntu live images"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

dependencies = [
    "click",
    "pyyaml",
    "requests",
]


[project.optional-dependencies]
dev = [
    "tox",
    "mypy",
    "flake8",
    "black",
    "types-PyYAML",
    "types-requests"
]

[project.urls]
"Homepage" = "https://github.com/gjolly/genesis"
"Bug Tracker" = "https://github.com/gjolly/genesis/issues"

[project.scripts]
genesis = "genesis.build:cli"

[tool.isort]
profile = "black"
