[metadata]
name = genesis
version = 0.0.1
author = Gauthier Jolly
author_email = contact@gauthier.uk
description = Tool to build ubuntu live images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gjolly/genesis
project_urls =
    Bug Tracker = https://github.com/gjolly/genesis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = genesis
python_requires = >=3.6
install_requires =
    click
    pyyaml

[options.entry_points]
console_scripts =
    genesis = genesis.build:main

[options.packages.find]
where = src
